RESOLVED FIXED21320
leaks of PropertyNameArrayData seen on buildbot
https://bugs.webkit.org/show_bug.cgi?id=21320
Summary leaks of PropertyNameArrayData seen on buildbot
Geoffrey Garen
Reported 2008-10-02 16:09:10 PDT
StructureID holds a RefPtr to PropertyNameArrayData, and vice-versa. That's the leak. Sam mentioned that PropertyNameArrayData's pointer could be a weak pointer instead, cleared in the StructureID destructor.
Attachments
patch (3.29 KB, patch)
2008-10-04 14:32 PDT, Sam Weinig
oliver: review+
Sam Weinig
Comment 1 2008-10-04 14:32:18 PDT
Oliver Hunt
Comment 2 2008-10-04 14:44:31 PDT
Comment on attachment 24092 [details] patch r=me -- test case?
Sam Weinig
Comment 3 2008-10-04 14:59:16 PDT
Fixed in r37300.
Note You need to log in before you can comment on or make changes to this bug.